add credits screen and change font style

--- a/tetris-2/css/fonts.css
+++ b/tetris-2/css/fonts.css
@@ -1,6 +1,8 @@
 @font-face {
-	font-family :'MartelSans';
-	src: url('../fonts/martelsans-regular.otf') format('opentype');
+	/*font-family :'MartelSans';*/
+    /*src: url('../fonts/martelsans-regular.otf') format('opentype');*/
+    font-family: 'MartelSans';
+    src: url('../fonts/pixel-emulator.otf') format('opentype');
 }
 
 .fontLoader {
